--- a/HTML/HTML-elements/index.html
+++ b/HTML/HTML-elements/index.html
@@ -6,10 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
 <section id="top">
-    <h1>Welcome to Veridian Dynamics</h1>
+    <h1 style="color:red" class="fancy-header">Welcome to Veridian Dynamics</h1>
     <p>At Veridian Dynamics, we solve your problems with <em><strong>technology</strong></em>.</p>
 </section>
 <hr>
