--- a/flexbox/one/index.html
+++ b/flexbox/one/index.html
@@ -7,12 +7,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="main.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Coustard:wght@400;900&family=DM+Serif+Display&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Coustard:wght@400;900&family=DM+Serif+Display&family=Montserrat&display=swap"
+              rel="stylesheet">
         <title>Flexbox One</title>
     </head>
     <body>
         <nav>
-            <img src="" alt="logo" id="logo">
+            <img src="../assets/logo.jpg" alt="logo" id="logo">
             <ul>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Products</li>
@@ -21,18 +22,17 @@
         </nav>
         <header>
             <h1>Keep It Simple Stationery</h1>
-                <button><a href="#">buy now</a></button>
+            <button id="cta-btn">buy now</button>
         </header>
-        <section>
+        <section id="quote-container">
             <p>We Keep Your Stationery Simple.</p>
         </section>
-        <section>
-            <div>
-                <img src="#" alt="">
+        <section id="why-container">
+            <div id="sml-landscape">
+<!--               img as div background-->
             </div>
-            <div>
+            <div id="why-txt-container">
                 <h2>Why Keep it Simple</h2>
-                <p><strong>#36.00</strong></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
@@ -40,7 +40,7 @@
         </section>
         <section id="products-container">
             <div class="product-item-container">
-                <img src="#" alt="">
+                <img src="" alt="">
                 <h2>The Unique Uni Calendar</h2>
                 <p><strong>#36.00</strong></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
@@ -49,7 +49,7 @@
             </div>
             <div class="product-item-container">
                 <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <h2>The Zebra Zettel</h2>
                 <p><strong>#36.00</strong></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
