--- a/flexbox/one/index.html
+++ b/flexbox/one/index.html
@@ -40,98 +40,100 @@
         </section>
         <section id="products-container">
             <div class="product-item-container">
-                <img src="" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-one.jpg" alt="" class="prod-img">
+                <h3>Unique Uni Calendar</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum
+                    deserunt dolore,
+                    placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Zebra Zettel</h2>
+                <img src="../assets/prod-three.jpg" alt="" class="prod-img">
+                <h3>A Zebra Zettel</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-two.jpg" alt="" class="prod-img">
+                <h3>Quiet Corner</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-four.jpg" alt="" class="prod-img">
+                <h3>Brain Dump</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-five.jpg" alt="" class="prod-img">
+                <h3>Sunrise Sonnets</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-six.jpg" alt="" class="prod-img">
+                <h3>Thrifty Thoughts</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-seven.jpg.jpg" alt="" class="prod-img">
+                <h3>Timely To Do</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-eight.jpg" alt="" class="prod-img">
+                <h3>Right Write</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-nine.jpg" alt="" class="prod-img">
+                <h3>A Chill Notebook</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-ten.jpg" alt="" class="prod-img">
+                <h3>A Chill Notebook</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-eleven.jpg" alt="" class="prod-img">
+                <h3>A Chill Notebook</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="#" alt="">
-                <h2>The Unique Uni Calendar</h2>
+                <img src="../assets/prod-twelve.jpg" alt="" class="prod-img">
+                <h3>A Chill Notebook</h3>
                 <p><strong>#36.00</strong></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
+                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
                     vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
                     reiciendis repellendus sed totam.</p>
             </div>
