--- a/flexbox/one/index.html
+++ b/flexbox/one/index.html
@@ -90,7 +90,7 @@
                     reiciendis repellendus sed totam.</p>
             </div>
             <div class="product-item-container">
-                <img src="../assets/prod-seven.jpg.jpg" alt="" class="prod-img">
+                <img src="../assets/prod-seven.jpg" alt="" class="prod-img">
                 <h3>Timely To Do</h3>
                 <p><strong>#36.00</strong></p>
                 <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
@@ -140,12 +140,23 @@
         </section>
         <footer>
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <h4>Keep It Simple Company</h4>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Community</a></li>
+                <li><a href="">Careers (We're Hiring!)</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Press</a></li>
+            </ul>
+
+            <ul>
+                <h4>Contact us</h4>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Etsy</a></li>
+                <li><a href="">Pinterest</a></li>
+                <li><a href="">Youtube</a></li>
             </ul>
         </footer>
     </body>
