--- a/flexbox/two/index.html
+++ b/flexbox/two/index.html
@@ -12,27 +12,27 @@
 
         <!-- Boxes        -->
         <section>
-            <div class="boxes">1</div>
-            <div class="boxes">2</div>
-            <div class="boxes">3</div>
-            <div class="boxes">4</div>
+            <div class="boxes order" id="one">1</div>
+            <div class="boxes" id="two">2</div>
+            <div class="boxes" id="three">3</div>
+            <div class="boxes order" id="four">4</div>
             <div class="boxes">5</div>
-            <div class="boxes">6</div>
+            <div class="boxes" id="six">6</div>
             <div class="boxes">7</div>
         </section>
 
-        <section>
-            <div class="flex-container">
-                <div class="flex-item" id="orange">1</div>
-                <div class="flex-item" id="purple">2</div>
-                <div class="flex-item" id="green">3</div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">3</div>
-                <div class="flex-item">3</div>
-            </div>
-        </section>
+<!--        <section>-->
+<!--            <div class="flex-container">-->
+<!--                <div class="flex-item" id="orange">1</div>-->
+<!--                <div class="flex-item" id="purple">2</div>-->
+<!--                <div class="flex-item" id="green">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--                <div class="flex-item">3</div>-->
+<!--            </div>-->
+<!--        </section>-->
     </body>
 </html>
