flexbox-in-practice

--- a/flexbox/one/index.html
+++ b/flexbox/one/index.html
@@ -13,11 +13,11 @@
     </head>
     <body>
         <nav>
-            <img src="../assets/logo.jpg" alt="logo" id="logo">
+            <img src="../assets/s.png" alt="logo" id="logo">
             <ul>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Products</li>
-                <li><a href="#"></a>We're Hiring!</li>
+                <li><a href="#why-txt-container">About</a></li>
+                <li><a href="#products-container">Products</a></li>
+                <li><a href="#hiring-link">We're Hiring!</a></li>
             </ul>
         </nav>
         <header>
@@ -144,7 +144,7 @@
                 <li><a href="">About</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Community</a></li>
-                <li><a href="">Careers (We're Hiring!)</a></li>
+                <li><a href="" id="hiring-link">Careers (We're Hiring!)</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Press</a></li>
             </ul>
