--- a/flexbox/flexbox-in-practice-exercises/three/flexbox-nav-exercise.html
+++ b/flexbox/flexbox-in-practice-exercises/three/flexbox-nav-exercise.html
@@ -5,18 +5,28 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <link rel="stylesheet" href="./flexbox-nav-exercise.css">
+        <title>Flexbox Nav Exercises</title>
     </head>
     <body>
         <nav>
             <ul class="page-links">
-                <li><a href="">Articles</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Market</a></li>
-                <li><a href="">Jobs</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Market</a></li>
+                <li><a href="#">Jobs</a></li>
             </ul>
-            <img src="" alt="">
-            <ul><a href=""><img src="" alt=""></a></ul>
+            <img id="logo-img" src="../../assets/logo.jpg" alt="">
+            <ul>
+
+            </ul>
+
+            <a href=""><li>Follow Us</li></a>
+            <li><a href="./assets/icons8-search.svg"></a></li>
+            <li><a href="./assets/icons8-shop-64.png"></a></li>
+            <li><a href="./assets/icons8-user-locked-64.png"></a></li>
+
+
         </nav>
     </body>
 </html>
