--- a/media-queries/lecture/media-queries.html
+++ b/media-queries/lecture/media-queries.html
@@ -20,124 +20,10 @@
                 <li><a href="#hiring-link">We're Hiring!</a></li>
             </ul>
         </nav>
-        <header>
-            <h1>Keep It Simple Stationery</h1>
-            <button id="cta-btn">buy now</button>
+        <header class="banner">
+            <h1>Meet My Doggo</h1>
+            <button>buy me a treat</button>
         </header>
-        <section id="quote-container">
-            <p>We Keep Your Stationery Simple.</p>
-        </section>
-        <section id="why-container">
-            <div id="sml-landscape">
-                <!--               img as div background-->
-            </div>
-            <div id="why-txt-container">
-                <h2>Why Keep it Simple</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-        </section>
-        <section id="products-container">
-            <div class="product-item-container">
-                <img src="../assets/prod-one.jpg" alt="" class="prod-img">
-                <h3>Unique Uni Calendar</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum
-                    deserunt dolore,
-                    placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-three.jpg" alt="" class="prod-img">
-                <h3>A Zebra Zettel</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-two.jpg" alt="" class="prod-img">
-                <h3>Quiet Corner</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-four.jpg" alt="" class="prod-img">
-                <h3>Brain Dump</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-five.jpg" alt="" class="prod-img">
-                <h3>Sunrise Sonnets</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-six.jpg" alt="" class="prod-img">
-                <h3>Thrifty Thoughts</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-seven.jpg" alt="" class="prod-img">
-                <h3>Timely To Do</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-eight.jpg" alt="" class="prod-img">
-                <h3>Right Write</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-nine.jpg" alt="" class="prod-img">
-                <h3>A Chill Notebook</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-ten.jpg" alt="" class="prod-img">
-                <h3>A Chill Notebook</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-eleven.jpg" alt="" class="prod-img">
-                <h3>A Chill Notebook</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-            <div class="product-item-container">
-                <img src="../assets/prod-twelve.jpg" alt="" class="prod-img">
-                <h3>A Chill Notebook</h3>
-                <p><strong>#36.00</strong></p>
-                <p class="prod-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum deserunt dolore, placeat
-                    vero voluptas. Aperiam cumque dignissimos dolor et inventore obcaecati perspiciatis quasi quia,
-                    reiciendis repellendus sed totam.</p>
-            </div>
-        </section>
         <footer>
             <ul>
                 <h4>Keep It Simple Company</h4>
