--- a/bootstrap/bootstrap-grid/index.html
+++ b/bootstrap/bootstrap-grid/index.html
@@ -31,9 +31,9 @@
                         <li class="list-inline-item"><i class="bi bi-linkedin"></i></span> @cody-the-duck</li>
                         <li class="list-inline-item"><i class="bi bi-twitter"></i></span> @cody-the-duck</li>
                     </ul>
-                    <hr>
+                    <div class="divider py-1"></div>
                 </div>
-                <div class="row justify-content-start">
+                <div class="row justify-content-start res-content">
                     <div class="col-sm-3 col-md-5">
                         <h3>SKILLS AND ABILITIES</h3>
                         <ul>
@@ -70,7 +70,7 @@
                         </div>
                     </div>
 
-                    <div class="col-9 col-md-7">
+                    <div class="col-sm-9 col-md-7">
                         <h3>DEVELOPMENT PROJECTS</h3>
                         <div class="row">
                             <p>Project 1</p>
