--- a/bootstrap/bootstrap-grid/index.html
+++ b/bootstrap/bootstrap-grid/index.html
@@ -15,22 +15,23 @@
     </head>
     <body>
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center top-res">
                 <div class="col-12  text-center">
-                    <h1>CODY THE DUCK</h1>
-
-                    <h2>Software Developer</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt doloribus, fuga impedit
-                        molestiae
-                        necessitatibus numquam odit qui quod sunt. Illum ipsa odio omnis recusandae suscipit. Cumque
-                        iusto
-                        maiores obcaecati perspiciatis.</p>
-                    <ul class="list-inline">
-                        <li class="list-inline-item"><i class="bi bi-telephone"></i></span> 210-123-1234</li>
-                        <li class="list-inline-item"><i class="bi bi-envelope"></i></span> cody@codeup.com</li>
-                        <li class="list-inline-item"><i class="bi bi-linkedin"></i></span> @cody-the-duck</li>
-                        <li class="list-inline-item"><i class="bi bi-twitter"></i></span> @cody-the-duck</li>
-                    </ul>
+                    <header>
+                        <h1><strong>CODY THE DUCK</strong></h1>
+                        <h2>Software Developer</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt doloribus, fuga impedit
+                            molestiae
+                            necessitatibus numquam odit qui quod sunt. Illum ipsa odio omnis recusandae suscipit. Cumque
+                            iusto
+                            maiores obcaecati perspiciatis.</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><i class="bi bi-telephone"></i></span> 210-123-1234</li>
+                            <li class="list-inline-item"><i class="bi bi-envelope"></i></span> cody@codeup.com</li>
+                            <li class="list-inline-item"><i class="bi bi-linkedin"></i></span> @cody-the-duck</li>
+                            <li class="list-inline-item"><i class="bi bi-twitter"></i></span> @cody-the-duck</li>
+                        </ul>
+                    </header>
                     <div class="divider py-1"></div>
                 </div>
                 <div class="row justify-content-start res-content">
