--- a/DOM/index.html
+++ b/DOM/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="main.css">
         <title>DOM</title>
     </head>
-    <body>
+    <body class="container">
         <!--    NAV BAR    -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -46,7 +46,7 @@
         </header>
 
         <!--        MAIN-->
-        <main>
+        <main class="main-container">
             <section class="section-container">
                 <p id="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur illum
                     itaque
@@ -55,8 +55,18 @@
                     sequi soluta? Dolore, nobis.</p>
             </section>
             <section class="section-container">
-
-
+                <div>
+                    <h2>Where</h2>
+                    <p>Whether you want to join us virtually or happen to live in the city you are always welcome!</p>
+                </div>
+                <div>
+                    <ul>
+                        <h3>Virtual</h3>
+                        <li>join us at <a href="#">runforfun.com</a></li>
+                        <h3>In The City</h3>
+                        <li>join us at: <a href="#">The coolest spot in town</a></li>
+                    </ul>
+                </div>
             </section>
             <section class="section-container">
 
